--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
         "livewire/livewire": "^2.5",
-        "mcamara/laravel-localization": "^1.7"
+        "mcamara/laravel-localization": "^1.7",
+        "santigarcor/laratrust": "^7.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
